--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,11 @@ h1 {
     font-size: 18px;
 }
 
+.coverSong {
+    width:40px;
+    height:40px;
+}
+
 input {
     padding: 5px 10px;
     font-size: 14px;
